--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test</title>
 </head>
 <body>
     <h1>Hello World</h1>
     <h2>My name is Arhaan</h2>
-    
 </body>
-</html>
+<footer>
+    <f1>This is a test</f1>
+</footer>
+</html> 
