--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,8 @@
     <h2>My name is Arhaan</h2>
 </body>
 <footer>
-    <f1>This is a test</f1>
+    <f1>Test 1</f1>
+    <f3>Test 2</f2>
+    <f2>Test 3</f3>
 </footer>
 </html> 
