--- a/Full Stack Dev/test1/index.html
+++ b/Full Stack Dev/test1/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arhaan's First Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!--* This is used to link CSS -->
 </head>
 <body>
     Hey this is my 1st website.
     And this works perfectly idk how.
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!--* This is used to link JS -->
 </body>
-</html>
+</html> 
