--- a/Full Stack Dev/Bookmark Website/bookmarkmanager.html
+++ b/Full Stack Dev/Bookmark Website/bookmarkmanager.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bookmark Manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1> My Profiles </h1>
+    <h2> Primary Bookmarks </h2>
+    <p><a target="_blank" href="https://www.linkedin.com/in/arhaan-girdhar-4a7274260/">Linkedln</a></p>
+    <p><a target="_blank" href="https://github.com/17arhaan">Github</a>
+    <h3> Secondary Bookmarks </h3></p>
+    <p><a target="_blank" href="https://www.instagram.com/awwrhaan/">Instagram</a>
 </body>
-</html>
+</html> 
