--- a/Full Stack Dev/test3 - Image & Lists/index.html
+++ b/Full Stack Dev/test3 - Image & Lists/index.html
@@ -1,12 +1,51 @@
+<!--!Image | Lists | Tables-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test 3</title>
+    <title>Test 3 ~ Images</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="script.js"></script>
+    <h1>Table :-</h1>
+    <table> <!--* Basic Table Structure -->      
+        <caption> Info Table </caption>
+        <tr>
+            <thead> <!--! Header -->
+
+            <th>Name</th>
+            <th>Age</th>
+            <th>Gender</th>
+            </tr>
+
+            </thead>
+
+            <tbody> <!--! Body / Content--> 
+                <!--* Optional-->
+                <tr> 
+                <td colspan="2">Arhaan</td> <!--* Column Space Syntax -->
+                <td rowspan="2">20</td>
+                <td>Male</td>
+            </tr>
+
+           </tbody>
+            
+            <tfoot> <!--! Footer -->
+
+            <tr>
+                <td>Arhan</td>
+                <td>21</td>
+                <td>Female</td>
+            </tr>
+
+            </tfoot>
+    </table>
+    <h1>
+        Images :-
+    </h1>
+    <img height="200" src="zmg.png" alt="Night"> <!--* Image Description -->
+    <img width="390" src="xmg.png" alt="Day"> <!--* Image Description -->
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
