--- a/Full Stack Dev/test2 - Anchor Text/index.html
+++ b/Full Stack Dev/test2 - Anchor Text/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1> Lorem. </h1>
     <h2> Lorem, ipsum!!? </h2>
-    <h3> Lorem ipsum dolor sit amet. </h3> <!--todo It can go until h6 -->
+    <h3> Lorem ipsum dolor sit amet. </h3> <!--* It can go until h6 -->
     <p style="background-color: rgb(229, 158, 255);"> <!--! This is called as Inline CSS -->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem esse tenetur nobis dicta ad fuga numquam quos ullam. Cum quas laboriosam maxime possimus pariatur consequuntur perferendis voluptates. </p> 
         <!--* This is called as a paragraph which comes under Header | Is filled using Lorem -->
