--- a/Full Stack Dev/test3 - Image & Lists/index.html
+++ b/Full Stack Dev/test3 - Image & Lists/index.html
@@ -1,4 +1,4 @@
-<!--!Image | Lists | Tables-->
+<!--todo Image | Lists | Tables-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Table :-</h1>
+    <header>
+        <h1>Table :-</h1>
+    </header>
     <table> <!--* Basic Table Structure -->      
         <caption> Info Table </caption>
         <tr>
@@ -47,5 +49,8 @@
     <img height="200" src="zmg.png" alt="Night"> <!--* Image Description -->
     <img width="390" src="xmg.png" alt="Day"> <!--* Image Description -->
     <!-- <script src="script.js"></script> -->
+    <footer>
+        Test 3 By Arhaan
+    </footer>
 </body>
 </html>
