--- a/Full Stack Dev/test2 - Anchor Text/index.html
+++ b/Full Stack Dev/test2 - Anchor Text/index.html
@@ -13,5 +13,6 @@
     <p style="background-color: rgb(229, 158, 255);"> <!--! This is called as Inline CSS -->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem esse tenetur nobis dicta ad fuga numquam quos ullam. Cum quas laboriosam maxime possimus pariatur consequuntur perferendis voluptates. </p> 
         <!--* This is called as a paragraph which comes under Header | Is filled using Lorem -->
+    <a href="https://www.google.com">Search</a> <!--* Anchot Text -->
 </body>
 </html> 
