--- a/Full Stack Dev/test5 - Forms & Input Tags/index.html
+++ b/Full Stack Dev/test5 - Forms & Input Tags/index.html
@@ -10,8 +10,13 @@
     <h1>Bank Account Register Form</h1>
     <form action="">
         <div> 
-            <label for="username"></label>
-            <input type="text" id="username" name="username" placeholder="Enter your username">  
+            <label for="firstname"></label>
+            <input type="text" id="firstname" name="firstname" placeholder="Enter your firstname">  
+            <!--! ID is used for Distinctivity-->
+        </div>
+        <div> 
+            <label for="lastname"></label>
+            <input type="text" id="lastname" name="lastname" placeholder="Enter your lastname">  
             <!--! ID is used for Distinctivity-->
         </div>
         <div>
