--- a/Full Stack Dev/test1 - Basics/index.html
+++ b/Full Stack Dev/test1 - Basics/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     Hey this is my 1st website.
-    And this works perfectly idk how.
+    And this works perfectly idk how..
+    Ezz peasy
 
     <script src="script.js"></script> <!--* This is used to link JS -->
 </body>
