--- a/Full Stack Dev/test7 - ID & Classes/index.html
+++ b/Full Stack Dev/test7 - ID & Classes/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="first" class="red">
+        <!--* ID = Unique --> First
+    </div>
+    <div id="second" class="red bg-yellow blue">
+        <!--* Multiple Classes --> Second
+    </div>
+    <span class="red">
+        <!--* Classes can be repeated -->
+    </span>
 </body>
 </html>
