--- a/Full Stack Dev/test3 - Image & Lists/index.html
+++ b/Full Stack Dev/test3 - Image & Lists/index.html
@@ -29,7 +29,7 @@
                 <td>Male</td>
             </tr>
             <tr>
-                <td>Arhaaan</td>
+                <td>Arhaaann</td>
                 <td>21</td>
                 <td>Female</td>
                                         > <!--* Same Line -->
