--- a/Full Stack Dev/test5 - Forms & Input Tags/index.html
+++ b/Full Stack Dev/test5 - Forms & Input Tags/index.html
@@ -30,7 +30,7 @@
         </div>
         <div>
             <input type="checkbox" id="Adult" name="Adult" value="yes">
-            <label for="Adult">Are u 18+ ??</label>  
+            <label for="Adult">Are above 18 ??</label>  
         </div>
         <div> <!--* Textbox-->
             <label for="comment">Enter you details here :-</label>
