--- a/Full Stack Dev/test6 - Display Property/index.html
+++ b/Full Stack Dev/test6 - Display Property/index.html
@@ -12,14 +12,14 @@
         Lorem ipsum dolor sit amet consectetur adipisicing.
     </p>
     <div>
-        This is test 6.1
+        This is test 6.1.
     </div>
     <!--! These are Inline elements -->
     <a 
       href="https://www.google.com">Google
     </a> 
     <span>
-        <--- This is test 6.2
+        <--- This is test 6.2.
     </span>
 </body>
 </html>
