--- a/Full Stack Dev/test7 - ID & Classes/index.html
+++ b/Full Stack Dev/test7 - ID & Classes/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div id="first" class="red">
-        <!--* ID = Unique --> First
+        <!--* ID = Unique --> 
+        First
     </div>
     <div id="second" class="red bg-yellow blue">
-        <!--* Multiple Classes --> Second
+        <!--* Multiple Classes --> 
+        Second
     </div>
     <span class="red">
         <!--* Classes can be repeated -->
