--- a/CSS/test 04/TextStyling.html
+++ b/CSS/test 04/TextStyling.html
@@ -28,5 +28,14 @@
     <div class = f6>
         like this one also
     </div>  
+    <div class = f7>
+        Center Allignment
+    </div>
+    <div class = f8>
+        SPACING
+    </div>
+    <div class = f9>
+        Shadow
+    </div>
 </body>
 </html>
