--- a/CSS/test 06/Combinatorics.html
+++ b/CSS/test 06/Combinatorics.html
@@ -10,5 +10,16 @@
     <div class = center-container>
         <h1>Link Styling</h1>
     <div>
+    <div>
+        <p> First </p>
+        <p> Second </p>
+        <section> 
+            <p>
+            Third
+            </p> 
+        </section>
+    </div>
+    <p> Fourth </p>
+    <p> Fifth </p>
 </body>
 </html>
