--- a/CSS/test 13/Positioning.html
+++ b/CSS/test 13/Positioning.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test 13</title>
     <style>
-        
+        * {
+            margin : 0px;
+            padding: 0px;
+        }
+        .box {
+            border: 2px solid black;
+            height: 100px;
+            width: 50vw;
+            margin: 3px;
+            padding: 2px;
+        }
     </style>
 </head>
 <body>
