--- a/CSS/test 13/Positioning.html
+++ b/CSS/test 13/Positioning.html
@@ -6,6 +6,7 @@
     <title>Test 13</title>
     <style>
         * {
+            background-color: bisque;
             margin : 0px;
             padding: 0px;
         }
@@ -15,15 +16,39 @@
             width: 50vw;
             margin: 3px;
             padding: 2px;
+            position: relative;
+        }
+        .box1 {
+            background-color: lightcoral;
+            top:50px;
+            left: 30px;
+            z-index: 1;
+        }
+        .box2 {
+            background-color: lightgreen;
+            bottom: 20px;
+            z-index: 1;
+        }
+        .box3 {
+            background-color: lightgray;
+            bottom: 90px;
+            left: 50px;
+            z-index: 2;
+        }
+        .box4 {
+            background-color: lightcyan;
+            bottom: 40vw;
+            left: 140px;
+            z-index: 1;
         }
     </style>
 </head>
 <body>
     <div class="parent">
-        <div class="box box1">1</div>
-        <div class="box box2">2</div>
-        <div class="box box3">3</div>
-        <div class="box box4">4</div>
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+        <div class="box box4"></div>
     </div>
 </body>
 </html>
