--- a/CSS/applications/Card/Card.html
+++ b/CSS/applications/Card/Card.html
@@ -4,15 +4,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&family=Poppins:wght@300&display=swap');
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: 'Poppins', sans-serif;
+    }
+    body {
+        background-color: gray;
+        padding: 45px;
+        display: flex;
+        justify-content: center; 
+        align-items: center; 
+        height: 100vh;
+    }
+    img {
+        margin: 0;
+        height: 250px;
+        width: 300px;
+        border-radius: 1rem;
+    }
+    .box1 {
+        border: 1px solid;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+        width: 310px;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: flex; 
+        padding: 20px;
+    }
+    .button button {
+        padding: 11px 30px;
+        border-radius: 30px;
+        background-color: rgb(216, 236, 253);
+        color: rgb(14, 150, 234);
+        font-size: 15px;
+        margin-top: 20px;
+        border: none;
+        font-weight: bolder;
+        cursor: pointer;
+    }
+    .button button:hover {
+        background-color: rgb(194, 225, 246);
+        color: rgb(10, 136, 214);
+    }
+    .title {
+        text-decoration: solid 2px;
+        font-weight: bolder;
+        text-align: left;
+        margin-top: 20px;
+        font-size: 25px;
+    }
+    .content {
+        margin-top: 20px;
+        color: gray;
+        font-weight: bold;
+        font-size: 2vh;
+        text-align: left;
+    }
+    .capsules {
+        display: flex;
+        gap: 10px;
+        margin-top: 20px;
+        background-color: white;
+        color: gray;
+    }
+    .capsules span {
+        border: 1px solid gray;
+        padding: 6px 10px;
+        border-radius: 17px;
+        font-size: 15px;
+        font-weight: bolder;
+    }
+    </style>
 </head>
 <body>
     <div>
         <div class = "box1">
             <img src="card.jpg" alt="">
+            <div class="capsules">
+                <span>Nature</span>
+                <span>Lake</span>
+            </div>
             <h1 class = title> Lago di Braies </h1>
-            <div class = "box2">
-                Read More
+            <div class = "content">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit expedita ad rerum numquam libero eum facere quidem!
+                </p>
+            </div>
+            <div class ="button">
+                <button>
+                    Read More
+                </button>
             </div>
         </div>
     </div>
