--- a/CSS/test 15/Selectors.html
+++ b/CSS/test 15/Selectors.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>More on CSS Selectors</title>
+    <title>Test 15</title>
     <style>
         /* .box:first-child{
             background-color: red;
