--- a/CSS/test 17/grid2.html
+++ b/CSS/test 17/grid2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grid</title>
+    <title>Test 17</title>
     <style>
         .container {
             border: 2px solid black;
